<resources>
    <string name="app_name">DansMultiPro</string>

    <string name="main_toolbar_title">Job List</string>
    <string name="job_detail_toolbar_title">Job Detail</string>
    <string name="search_result">Search Result</string>
    <string name="company">Company</string>
    <string name="job_specification">Job Specification</string>
    <string name="go_to_website">Go to Website</string>
    <string name="title">Title</string>
    <string name="fulltime">Fulltime</string>
    <string name="description">Description</string>
    <string name="location">Location</string>

    <string name="button_apply_filter">Apply Filter</string>
    <string name="button_logout">Logout</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_profile">Account</string>

    <string name="hint_search">Search</string>

    <string name="under_development_message">Under Development!</string>
</resources>