<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry"
    tools:showIn="@layout/fragment_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMainViewFilterBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_4"
        android:paddingEnd="@dimen/dimen_12"
        android:paddingStart="@dimen/dimen_12"
        android:paddingTop="@dimen/dimen_8"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFilterFullTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fulltime"
            android:textAppearance="@style/SearchFilterName"
            app:layout_constraintBottom_toBottomOf="@+id/switchFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switchFilter" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFilterLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dimen_50"
            android:text="@string/location"
            android:textAppearance="@style/SearchFilterName"
            app:layout_constraintBottom_toBottomOf="@+id/etFilterLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etFilterLocation" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFilterLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape_location_box"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingBottom="@dimen/dimen_4"
            android:paddingEnd="@dimen/dimen_8"
            android:paddingStart="@dimen/dimen_8"
            android:paddingTop="@dimen/dimen_4"
            android:singleLine="true"
            android:textAppearance="@style/SearchBarLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchFilter"
            app:layout_constraintStart_toEndOf="@+id/tvFilterLocationText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApplyFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_apply_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFilterLocation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>